--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>HUBERT IS 'N NAT KOEK</title>
+    <title>Arno is rerig n poes. En jeandre se voel werk nie.</title>
 </head>
 <body>
 
